--- a/project/visionos/adding-3d-content-to-your-app.yml
+++ b/project/visionos/adding-3d-content-to-your-app.yml
@@ -2,14 +2,14 @@
   提示: ''
   翻译: '为 App 增添 3D 内容'
 - 内容: 'Add depth and dimension to your visionOS app and discover how to incorporate your app’s content into a person’s surroundings.'
-  提示: '译者注： depth ，这里翻译成“深度”，即为空间深度，也叫纵深。是物体在空间距离下，产生的视觉焦点，并导致所有物体围绕这个焦点聚拢的聚焦方式。通俗讲就是人在一副画面中感觉到的强烈的远近对比。所以，人们通过纵深来营造画面的立体感。'
+  提示: '译者注： depth ，这里翻译成“深度”，即为空间深度，也叫纵深。是物体在空间距离下，产生的视觉焦点，并导致所有物体围绕这个焦点聚拢的聚焦方式。通俗讲就是人在一副画面中感觉到的强烈的远近对比。所以，用户通过纵深来营造画面的立体感。'
   翻译: '在你的 visionOS App 中添加“深度”——这个第三个维度（ z 轴），以及了解如何将你的应用程序融入到用户的周围环境中。'
 - 内容: 'Overview'
   提示: ''
   翻译: '概述'
 - 内容: 'A device with a stereoscopic display lets people experience 3D content in a way that feels more real. Content appears to have real depth, and people can view it from different angles, making it seem like it’s there in front of them.'
   提示: ''
-  翻译: '立体显示可以让人感受到更真实的 3D 内容。 3D 内容增添让人感觉更加真实的视觉深度，人们可以从不同角度观看，仿佛这些内容真的就在他们的面前。'
+  翻译: '立体显示可以让人感受到更真实的 3D 内容。 3D 内容增添让人感觉更加真实的视觉深度，用户可以从不同角度观看，仿佛这些内容真的就在他们的面前。'
 - 内容: 'When building an app for visionOS, think about ways you might add depth to your app’s interface. The system provides several ways to display 3D content, including in your existing windows, in a volume, and in an immersive space. Choose the options that work best for your app and the content you offer.'
   提示: ''
   翻译: '在构建 visionOS 应用程序，就要考虑在你的应用程序中添加深度（ z 轴）这个纬度。系统提供了多种方式展示 3D 内容，包括在已有的 2D 窗口( window )，立体窗口( volume )，或者虚拟空间( ImmersiveSpace )。 根据你 App 中内容选择最适合展示方式。'
