--- a/project/visionos/bringing-your-app-to-visionos.yml
+++ b/project/visionos/bringing-your-app-to-visionos.yml
@@ -12,7 +12,7 @@
   翻译: '如果你有一个在 iPadOS 或 iOS 上运行的应用，你可以使用 visionOS SDK 构建该应用程序，以便在该平台上运行。为 visionOS 专门构建的应用采用标准系统外观，在该平台上看起来更自然。同时，更新应用也是添加在该平台上吸引眼球的元素（如 3D 内容和沉浸式体验）的好机会。'
 - 内容: 'In most cases, all you need to do to support visionOS is update your Xcode project’s settings and recompile your code. Depending on your app, you might need to make additional changes to account for features that are only found in the iOS SDK. While most of the same technologies are available on both platforms, some technologies don’t make sense or require hardware that isn’t present on visionOS devices. For example, people don’t typically use a headset to make contactless payments, so apps that that use the ProximityReader framework must disable those features when running in visionOS.'
   提示: ''
-  翻译: '在大多数情况下，你只需更新 Xcode 的项目设置并重新编译代码即可支持 visionOS。根据你的应用，你可能需要进行其他更改，以解决那些仅在 iOS SDK 中支持的功能。虽然在两个平台上多数技术都是通用的，有些技术在 visionOS 设备上并不合理，或者需要的硬件并不存在。例如，人们通常不使用头戴式设备进行电子支付，因此使用 ProximityReader 框架的应用在 visionOS 中运行时必须禁用这些功能。'
+  翻译: '在大多数情况下，你只需更新 Xcode 的项目设置并重新编译代码即可支持 visionOS。根据你的应用，你可能需要进行其他更改，以解决那些仅在 iOS SDK 中支持的功能。虽然在两个平台上多数技术都是通用的，有些技术在 visionOS 设备上并不合理，或者需要的硬件并不存在。例如，用户通常不使用头戴式设备进行电子支付，因此使用 ProximityReader 框架的应用在 visionOS 中运行时必须禁用这些功能。'
 - 内容: 'Note'
   提示: ''
   翻译: '备注'
@@ -261,7 +261,7 @@
   翻译: '3D 内容。想想在哪些内容中可以加入 3D 模型和形状。使用 RealityKit 实现你的内容，并使用 RealityView 从你的应用中展示这些内容。请参阅在应用中添加 3D 内容。'
 - 内容: 'Immersive experiences. Present a space to immerse someone in your app’s content. Spaces let you place content anywhere in a person’s surroundings. You can also create fully immersive experiences that display only your app’s content. See Creating fully immersive experiences in your app.'
   提示: ''
-  翻译: '沉浸式体验。显示一个空间，让人们沉浸在你的应用内容中。空间可以让你将内容呈现在用户周围的任何地方。你还可以创建只显示当前应用内容的完全沉浸式体验。请参阅在应用中创建完全沉浸式体验。'
+  翻译: '沉浸式体验。显示一个空间，让用户沉浸在你的应用内容中。空间可以让你将内容呈现在用户周围的任何地方。你还可以创建只显示当前应用内容的完全沉浸式体验。请参阅在应用中创建完全沉浸式体验。'
 - 内容: 'Interactions with someone’s surroundings. Use ARKit to facilitate interactions between your content and the surroundings. For example, detect planar surfaces to use as anchor points for your content. See ARKit.'
   提示: ''
   翻译: '与周围环境的互动。使用 ARKit 可促进你的内容与周围环境之间的互动。例如，检测平面以用作内容的锚点。请参阅 ARKit。'
@@ -297,4 +297,4 @@
   翻译: '自拍或摄影类应用。这包括以通过设备摄像头捕捉图像或视频为主要目的的应用程序。'
 - 内容: 'If your app uses an unsupported feature but can function without it, you can still bring your app to visionOS. Remove features that aren’t available and focus on bringing the rest of your content to the platform. For example, if you have an app that lets people write down notes and take pictures to include with those notes, disable the picture-taking ability in visionOS but let people add text and incorporate images they already have.'
   提示: ''
-  翻译: '如果你的应用使用了不支持的功能，但在没有该功能的情况下也能正常运行，你仍然可以将应用移植到 visionOS 中。移除不支持的功能，并专注于将其他内容移植到该平台。例如，如果你有一款应用可以让人们写下笔记并拍照放在笔记中，那么你可以在 visionOS 中禁用拍照功能，但允许用户添加文字并整合已有的图片。'
+  翻译: '如果你的应用使用了不支持的功能，但在没有该功能的情况下也能正常运行，你仍然可以将应用移植到 visionOS 中。移除不支持的功能，并专注于将其他内容移植到该平台。例如，如果你有一款应用可以让用户写下笔记并拍照放在笔记中，那么你可以在 visionOS 中禁用拍照功能，但允许用户添加文字并整合已有的图片。'
