--- a/project/visionos/diorama.yml
+++ b/project/visionos/diorama.yml
@@ -1,9 +1,9 @@
 - 内容: 'Diorama'
   提示: ''
-  翻译: 'Diorama'
+  翻译: '西洋镜'
 - 内容: 'Design scenes for your visionOS app using Reality Composer Pro.'
   提示: ''
-  翻译: '使用 Reality Composer Pro 设计 visionOS 应用程序中的场景。'
+  翻译: '使用 Reality Composer Pro 设计 visionOS 应用中的场景。'
 - 内容: 'Overview'
   提示: ''
   翻译: '概览'
