--- a/project/visionos/tracking-images-in-3d-space.yml
+++ b/project/visionos/tracking-images-in-3d-space.yml
@@ -3,7 +3,7 @@
   翻译: '在三维空间中追踪预登记图像'
 - 内容: 'Place content based on the current position of a known image in a person’s surroundings.'
   提示: ''
-  翻译: '根据已知图像的当前位置在用户周边放置内容。'
+  翻译: '根据已知图像的当前位置在用户周围放置内容。'
 - 内容: 'Overview'
   提示: ''
   翻译: '概述'
