feat：修改 yml，添加 md 文件

--- a/project/visionos/positioning-and-sizing-windows.yml
+++ b/project/visionos/positioning-and-sizing-windows.yml
@@ -3,13 +3,13 @@
   翻译: '定位和调整窗口大小'
 - 内容: 'Influence the initial geometry of windows that your app presents.'
   提示: ''
-  翻译: '影响应用呈现的窗口的初始几何位置和大小'
+  翻译: '影响应用呈现的窗口的初始几何位置和大小。'
 - 内容: 'Overview'
   提示: ''
   翻译: '概述'
 - 内容: 'visionOS and macOS enable people to move and resize windows. In some cases, your app can use scene modifiers to influence a window’s initial geometry on these platforms, as well as to specify the strategy that the system employs to place minimum and maximum size limitations on a window. This kind of configuration affects both windows and volumes, which are windows with the volumetric window style.'
   提示: ''
-  翻译: 'visionOS 和 macOS 允许用户能够移动和调整窗口大小。在某些情况下，你的应用可以使用场景修饰器来影响窗口在这些平台上的初始几何位置和大小，以及指定系统用于在窗口上设置最小和最大尺寸限制的策略。这种配置会影响窗口和立体窗口（具有 volumetric 窗口样式的窗口）。'
+  翻译: 'visionOS 和 macOS 允许用户移动和调整窗口大小。在某些情况下，你的应用可以使用场景修饰符来影响窗口在这些平台上的初始几何体，以及指定系统用于在窗口上设置最小和最大尺寸限制的策略。这种配置会影响窗口和立体窗口（具有 volumetric 窗口样式的窗口）。'
 - 内容: 'Your ability to configure window size and position is subject to the following constraints:'
   提示: ''
   翻译: '配置窗口大小和位置的能力受以下限制：'
@@ -21,10 +21,10 @@
   翻译: '虽然你可以更改窗口的内容，但不能在窗口出现后直接操作窗口位置或大小。这确保了用户可以完全控制他们的工作空间。'
 - 内容: 'During state restoration, the system restores windows to their previous position and size.'
   提示: ''
-  翻译: '在 app 状态恢复的时候，系统会将窗口恢复到其以前的位置和大小。'
+  翻译: '在应用状态恢复的时候，系统会将窗口恢复到其以前的位置和大小。'
 - 内容: 'Note'
   提示: ''
-  翻译: '注意'
+  翻译: '备注'
 - 内容: 'Windows in iPadOS occupy the full screen, or share the screen with another window in Slide Over or Split View. You can’t programmatically affect window geometry on that platform.'
   提示: ''
   翻译: 'iPadOS 中的窗口占据全屏，或在“侧拉”（Slide Over）或“分屏浏览”（Split）中与另一个窗口共享屏幕。你无法以编程方式影响该平台上的窗口几何位置和大小。'
@@ -40,18 +40,21 @@
 - 内容: 'The system aligns the point in the window that corresponds to the specified UnitPoint with the point in the screen that corresponds to the same unit point. You can use a built-in unit point, like bottomTrailing in the above example, or define a custom one.'
   提示: ''
   翻译: '系统将窗口中与指定 UnitPoint 点相对应的点与屏幕中与同一单位点相对应的点对齐。你可以使用内置单位点（如上例所示的 bottomTrailing），也可以定义一个自定义单位点。'
-- 内容: 'Important'
+- 内容: 'You can’t use defaultPosition(_:) in visionOS. Instead the system places new windows automatically depending on the situation:'
   提示: ''
-  翻译: '重要'
-- 内容: 'You can’t use defaultPosition(_:) in visionOS. The system always places new windows directly in front of people, where they happen to be looking at the moment the window opens. This helps to make people aware of new windows.'
+  翻译: '你不能在 visionOS 中使用 defaultPosition(_:)。相反，系统会根据情况自动放置新窗口：'
+- 内容: 'When someone first launches an app from the Home View, the system places the app’s window relative to the Home View.'
   提示: ''
-  翻译: '你不能在 visionOS 中使用 defaultPosition(_:)。visionOS 总是将新窗口直接放置在用户面前，在窗口打开时用户一眼就能看到的位置。这有助于用户感知新窗口的出现。'
+  翻译: '当用户首次从主页视图启动应用时，系统会相对于主页视图放置应用的窗口。'
+- 内容: 'When a running app opens a new window, the system places the new window in front of one of the app’s existing windows.'
+  提示: ''
+  翻译: '当正在运行的应用打开新窗口时，系统会将新窗口放在应用的现有窗口之一的前面。'
 - 内容: 'Specify initial window size'
   提示: ''
   翻译: '指定窗口初始大小'
 - 内容: 'You can indicate a default initial size for a new window that the system creates from a Scene declaration by applying one of the default size scene modifiers, like defaultSize(width:height:). For example, you can request that new windows that a WindowGroup generates occupy 600 points in the x-dimension and 400 points in the y-dimension:'
   提示: ''
-  翻译: '你可以通过应用默认大小场景修饰器的其中一个（如 defaultSize(width:height:) ）来指示系统从 Scene 声明中创建的新窗口的默认初始大小。例如，你可以请求 WindowGroup 生成的新窗口在 x 维度中占据 600 个点，在 y 维度中占据 400 个点：'
+  翻译: '你可以通过应用默认大小场景修饰器的其中一个（如 defaultSize(width:height:) ）来指示系统从 Scene 声明中创建的新窗口的默认初始大小。例如，你可以请求 WindowGroup 生成的新窗口在 x 维度中占据 600 磅，在 y 维度中占据 400 磅：'
 - 内容: 'The system might clamp the actual size of the window depending on both the window’s content and resizability settings.'
   提示: ''
   翻译: '系统可能会根据窗口的内容和可调整大小设置来限制窗口的实际大小。'
@@ -66,7 +69,7 @@
   翻译: '你可以指定系统对窗口尺寸调整的限制。所有场景的默认可调整性为 automatic。应用该策略时，Settings 窗口使用该 contentSize 策略， 其中最小和最大窗口尺寸都与窗口所包含内容的最小和最大尺寸相匹配。其他场景类型默认使用 contentMinSize 策略 ，它保留了最小尺寸限制，但并不限制最大尺寸。'
 - 内容: 'You can specify one of these resizability strategies explicitly by adding the windowResizability(_:) scene modifier to a scene. For example, people can resize windows from the following window group to between 100 and 400 points in both dimensions because the frame modifier imposes those bounds on the content view:'
   提示: ''
-  翻译: '你可以通过向场景添加 windowResizability(_:) 场景修改器来显式指定某个特定的可调整尺寸策略。例如，用户可以将窗口的大小从以下窗口组调整为两个维度的 100 到 400 点之间，因为 frame 修饰器会将这些边界强加在内容视图上：'
+  翻译: '你可以通过向场景添加 windowResizability(_:) 场景修改器来显式指定某个特定的可调整尺寸策略。例如，用户可以将窗口的大小从以下窗口组调整为两个维度的 100 到 400 磅之间，因为 frame 修饰器会将这些边界强加在内容视图上：'
 - 内容: 'You can take this even further and enforce a specific size for a window with content that has a fixed size.'
   提示: ''
   翻译: '你可以更进一步，为具有固定大小的内容的窗口强制指定尺寸。'
@@ -75,10 +78,10 @@
   翻译: '指定一个立体窗口的大小'
 - 内容: 'When you create a volume, which is a window with the volumetric style, you can specify the volume’s size using one of the three-dimensional default size modifiers, like defaultSize(width:height:depth:in:). The following code creates a volume that’s one meter on a side:'
   提示: ''
-  翻译: '当你创建一个立体窗口（具有 volumetric 窗口样式的窗口）时，你可以使用三维的默认尺寸修饰器（如 defaultSize(width:height:depth:in:)））。'
+  翻译: '当你创建一个立体窗口（具有 volumetric 窗口样式的窗口）时，你可以使用三维的默认尺寸修饰器（如 defaultSize(width:height:depth:in:)）。以下代码创建一个边长为 1 米的立体窗口：'
 - 内容: 'The volume maintains this size for its entire lifetime. People can’t change the size of a volume at runtime.'
   提示: ''
   翻译: '立体窗口将在其整个生命周期内保持此大小。用户无法在运行时更改立体窗口的大小。'
 - 内容: 'Although you can specify a volume’s size in points, it’s typically better to use physical units, like the above code which specifies a size in meters. This is because the system renders a volume with fixed scaling rather than dynamic scaling, unlike a regular window, which means the volume appears more like a physical object than a user interface. For information about the different kinds of scaling, see Spatial layout.'
   提示: ''
-  翻译: '虽然你可以以“点”为单位指定立体窗口的大小，但通常最好使用物理单位，如上面的代码，它以米为单位指定大小。这是因为与常规窗口不同，系统以固定缩放而不是动态缩放的形式来呈现立体窗口，这意味着立体窗口看起来更像是物理对象，而不是用户界面。有关不同类型缩放的信息，请参阅空间布局。'
+  翻译: '虽然你可以以“磅”为单位指定立体窗口的大小，但通常最好使用物理单位，如上面的代码，它以米为单位指定大小。这是因为与常规窗口不同，系统以固定缩放而不是动态缩放的形式来呈现立体窗口，这意味着立体窗口看起来更像是物理对象，而不是用户界面。有关不同类型缩放的信息，请参阅空间布局。'
