feat：完成 80 yml & md

--- a/project/visionos/interacting-with-your-app-in-the-visionos-simulator.yml
+++ b/project/visionos/interacting-with-your-app-in-the-visionos-simulator.yml
@@ -1,159 +1,159 @@
 - 内容: 'Interacting with your app in the visionOS simulator'
   提示: ''
-  翻译: ''
+  翻译: '在 visionOS 模拟器中与应用交互'
 - 内容: 'Use your Mac to navigate spaces and control interactions with your visionOS apps in Simulator.'
   提示: ''
-  翻译: ''
+  翻译: '在模拟器中使用 Mac 浏览空间并控制与 visionOS 应用的交互。'
 - 内容: 'Overview'
   提示: ''
-  翻译: ''
+  翻译: '概述'
 - 内容: 'Use Simulator to run apps in visionOS without installing them on a physical device. When you run your app in Simulator, you can see a monoscopic view of your app’s windows and 3D content inside an immersive space. Use your Mac to alter the viewpoint of the app within the space and navigate the app’s interface.'
   提示: ''
-  翻译: ''
+  翻译: '使用模拟器可在 visionOS 中运行应用，而无需将其安装到物理设备上。在模拟器中运行应用时，你可以在沉浸式空间中看到应用窗口和三维内容的单视角视图。使用 Mac 改变空间内应用的视角，并导航应用的界面。'
 - 内容: 'Interact with your app'
   提示: ''
-  翻译: ''
+  翻译: '与应用交互'
 - 内容: 'To use your Mac’s pointer and keyboard to create gestures, choose “Select to interact with the scene” from the buttons at the bottom-right of a visionOS simulator window. The current gaze position tracks your pointer movements when you hover over content within the space.'
   提示: ''
-  翻译: ''
+  翻译: '要使用 Mac 的指针和键盘创建手势，请从 visionOS 模拟器窗口右下方的按钮中选择 "选择与场景交互"。当你将鼠标悬停在空间中的内容上时，你的指针移动会控制你的视线。'
 - 内容: 'Use the following actions to trigger gestures:'
   提示: ''
-  翻译: ''
+  翻译: '使用以下操作来触发手势：'
 - 内容: 'Gesture'
   提示: ''
-  翻译: ''
+  翻译: '手势'
 - 内容: 'To simulate'
   提示: ''
-  翻译: ''
+  翻译: '如何模拟'
 - 内容: 'Tap'
   提示: ''
-  翻译: ''
+  翻译: '轻点'
 - 内容: 'Click.'
   提示: ''
-  翻译: ''
+  翻译: '单击。'
 - 内容: 'Double-tap'
   提示: ''
-  翻译: ''
+  翻译: '双点'
 - 内容: 'Double-click.'
   提示: ''
-  翻译: ''
+  翻译: '双击。'
 - 内容: 'Touch and hold'
   提示: ''
-  翻译: ''
+  翻译: '触摸并捏住'
 - 内容: 'Click and hold.'
   提示: ''
-  翻译: ''
+  翻译: '单击并按住。'
 - 内容: 'Drag (left, right, up, and down)'
   提示: ''
-  翻译: ''
+  翻译: '拖动（上下左右）'
 - 内容: 'Drag left, right, up, and down.'
   提示: ''
-  翻译: ''
+  翻译: '向上下左右拖动。'
 - 内容: 'Drag (forward and back)'
   提示: ''
-  翻译: ''
+  翻译: '拖动（前后）'
 - 内容: 'Shift-drag up and down.'
   提示: ''
-  翻译: ''
+  翻译: '按住 Shift 键并上下拖动。'
 - 内容: 'Two-handed gestures'
   提示: ''
-  翻译: ''
+  翻译: '双手手势'
 - 内容: 'Press and hold the Option key to display touch points. Move the pointer while pressing the Option key to change the distance between the touch points. Move the pointer and hold the Shift and Option keys to reposition the touch points.'
   提示: ''
-  翻译: ''
+  翻译: '按住 Option 键显示触摸点。按住 Option 键的同时移动指针，可更改触摸点之间的距离。移动指针并按住 Shift 键和 Option 键可重新定位触摸点。'
 - 内容: 'Activate device buttons using menu items or by clicking the controls in the simulator window toolbar.'
   提示: ''
-  翻译: ''
+  翻译: '使用菜单项或点击模拟器窗口工具栏上的控件激活设备按钮。'
 - 内容: 'Navigate the space'
   提示: ''
-  翻译: ''
+  翻译: '空间导航'
 - 内容: 'Use your Mac’s pointer and the keyboard to reposition your viewpoint in a visionOS simulator window:'
   提示: ''
-  翻译: ''
+  翻译: '使用 Mac 的指针和键盘在 visionOS 模拟器窗口中调整视角：'
 - 内容: 'Movement'
   提示: ''
-  翻译: ''
+  翻译: '动作'
 - 内容: 'To simulate'
   提示: ''
-  翻译: ''
+  翻译: '如何模拟'
 - 内容: 'Forward'
   提示: ''
-  翻译: ''
+  翻译: '前移'
 - 内容: 'Press the W key (or Up Arrow key), or perform a pinch gesture moving two fingers away from each other on a trackpad.'
   提示: ''
-  翻译: ''
+  翻译: '按 W 键（或向上箭头键），或在触控板上做出两指分开的捏合手势。'
 - 内容: 'Backward'
   提示: ''
-  翻译: ''
+  翻译: '后移'
 - 内容: 'Press the S key (or Down Arrow key), or perform a pinch gesture moving two fingers toward each other on a trackpad.'
   提示: ''
-  翻译: ''
+  翻译: '按 S 键（或向下箭头键），或在触控板上用两指相向移动做捏的手势。'
 - 内容: 'Left'
   提示: ''
-  翻译: ''
+  翻译: '左移'
 - 内容: 'Press the A key (or Left Arrow key), or scroll left using a trackpad or Magic Mouse.'
   提示: ''
-  翻译: ''
+  翻译: '按 A 键（或左箭头键），或使用触控板或 Magic Mouse 向左滚动。'
 - 内容: 'Right'
   提示: ''
-  翻译: ''
+  翻译: '右移'
 - 内容: 'Press the D key (or Right Arrow key), or scroll right using a trackpad or Magic Mouse.'
   提示: ''
-  翻译: ''
+  翻译: '按 D 键（或右箭头键），或使用触控板或 Magic Mouse 向右滚动。'
 - 内容: 'Up'
   提示: ''
-  翻译: ''
+  翻译: '上移'
 - 内容: 'Press the E key, or scroll up using a trackpad or Magic Mouse.'
   提示: ''
-  翻译: ''
+  翻译: '按 E 键，或使用触控板或 Magic Mouse 向上滚动。'
 - 内容: 'Down'
   提示: ''
-  翻译: ''
+  翻译: '下移'
 - 内容: 'Press the Q key, or scroll down using a trackpad or Magic Mouse.'
   提示: ''
-  翻译: ''
+  翻译: '按 Q 键，或使用触控板或 Magic Mouse 向下滚动。'
 - 内容: 'You can also control the viewpoint with a standard drag. To do so, choose “Drag to pan the camera” from the buttons at the bottom-right of the simulator window to move the viewpoint left, right, up or down and choose “Drag to dolly the camera” to move it forward or backward.'
   提示: ''
-  翻译: ''
+  翻译: '你还可以通过标准拖动来控制视角。为此，请从模拟器窗口右下方的按钮中选择 "拖动平移摄像机 "来左右、上下移动视角，或选择 "拖动移动摄像机 "来前后移动视角。'
 - 内容: 'To change your viewing angle, Control-drag inside a visionOS simulator window. You can choose “Drag to tilt the camera” from the buttons at the bottom-right of the simulator window to use a drag without the Control key.'
   提示: ''
-  翻译: ''
+  翻译: '要改变视角，可在 visionOS 模拟器窗口内按住 Control 键拖动。你可以从模拟器窗口右下方的按钮中选择 "拖动摄像机以倾斜"，这样就可以在不使用 Control 键的情况下拖动摄像机了。'
 - 内容: 'To reset the viewpoint and viewing angle for a visionOS simulator, choose the Reset Camera button from the toolbar at the top-right of its window.'
   提示: ''
-  翻译: ''
+  翻译: '要重置 visionOS 模拟器的视角，请选择窗口右下方的 "重置摄像机 "按钮。'
 - 内容: 'Note'
   提示: ''
-  翻译: ''
+  翻译: '注意'
 - 内容: 'To capture the input from the pointer and keyboard, bypassing navigation control, to direct the input to the simulated device, use the Pointer Capture and Keyboard Capture buttons in the toolbar at the top-right of a visionOS simulator window. Press the Esc (Escape) key to disable capture and restore navigation controls.'
   提示: ''
-  翻译: ''
+  翻译: '要将指针和键盘输入定向到模拟设备，请选择 visionOS 模拟器窗口右上方工具栏中的 "捕捉指针 "或 "捕捉键盘 "按钮。这些按钮可以绕过 Mac 主机的指针和键盘输入，防止它们控制 visionOS 模拟器窗口中的视角。要将输入重新定向到 Mac 主机，请按 Esc 键。'
 - 内容: 'When moving with a trackpad or Magic Mouse, Simulator respects the natural scrolling setting on macOS.'
   提示: ''
-  翻译: ''
+  翻译: '使用触控板或 Magic Mouse 进行移动时，模拟器会尊重 macOS 的自然滚动设置。'
 - 内容: 'You can also use a game controller to control your movement. Use the left stick to move left, right, forward or back. Use R2 and L2 to move up and down. Use the right stick on a game controller to pan around the space.'
   提示: ''
-  翻译: ''
+  翻译: '你还可以使用游戏控制器来控制移动。使用左摇杆向左、向右、向前或向后移动。使用 R2 和 L2 可以上下移动。使用游戏控制器上的右摇杆在空间内平移。'
 - 内容: 'Switch between simulated scenes'
   提示: ''
-  翻译: ''
+  翻译: '在模拟场景之间切换'
 - 内容: 'Simulator provides multiple built-in scenes you can use to simulate passthrough in different surroundings. These include unique room layouts and furniture for different testing scenarios, each available in different lighting conditions.'
   提示: ''
-  翻译: ''
+  翻译: '模拟器提供了多个内置场景，你可以模拟在不同的环境中穿行。这些场景包括用于不同测试场景的独特房间布局和家具，每个场景都有不同的照明条件。'
 - 内容: 'Use the simulated scene to test:'
   提示: ''
-  翻译: ''
+  翻译: '使用模拟场景来测试：'
 - 内容: 'Readability of your app in varying backgrounds and varying lighting conditions.'
   提示: ''
-  翻译: ''
+  翻译: '应用在不同背景和不同照明条件下的可读性。'
 - 内容: 'Different scenarios, including limited and cluttered surroundings, to see how your app adapts to them.'
   提示: ''
-  翻译: ''
+  翻译: '不同的场景，包括有限的和杂乱的环境，以了解你的应用如何适应这些场景。'
 - 内容: 'Content layout, positioning, and scale.'
   提示: ''
-  翻译: ''
+  翻译: '内容布局、定位和尺寸'
 - 内容: 'Spatial audio and acoustics.'
   提示: ''
-  翻译: ''
+  翻译: '空间音频和音响效果。'
 - 内容: 'To change the simulated scene, click the Simulated Scenes button in the toolbar at the top-right of a visionOS simulator window and choose a different scene.'
   提示: ''
-  翻译: ''
+  翻译: '要更改模拟场景，请单击 visionOS 模拟器窗口右上方工具栏中的 "模拟场景 "按钮，然后选择不同的场景。'
