wip：完成 md，待校对

--- a/project/visionos/diagnosing-and-resolving-bugs-in-your-running-app.yml
+++ b/project/visionos/diagnosing-and-resolving-bugs-in-your-running-app.yml
@@ -1,9 +1,9 @@
 - 内容: 'Diagnosing and resolving bugs in your running app'
   提示: ''
-  翻译: ''
+  翻译: '诊断和解决运行中应用的错误'
 - 内容: 'Inspect your app to isolate bugs, locate crashes, identify excess system-resource usage, visualize memory bugs, and investigate problems in its appearance.'
   提示: ''
-  翻译: ''
+  翻译: '检查应用以隔离错误、定位崩溃、识别过多的系统资源使用、可视化内存错误并调查其外观问题。'
 - 内容: 'Overview'
   提示: ''
   翻译: ''
